--- a/src/app/components/web-public/web-public.component.html
+++ b/src/app/components/web-public/web-public.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navigation fixed-top sticky"  id="navbar">
+<nav class="navbar navbar-expand-lg navigation fixed-top sticky nav-sticky"  id="navbar">
     <div class="container">
         <a class="navbar-logo" routerLink="/">
             <img src="assets/images/bia.jpg" alt="" height="55" class="logo logo-dark">
@@ -12,21 +12,21 @@
         <div class="collapse navbar-collapse" id="topnav-menu-content">
             <ul class="navbar-nav ms-auto" id="topnav-menu">
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript: void(0);"
+                    <a class="nav-link a-txt" href="javascript: void(0);"
                     (click)="scrollToElement('home')"  >Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript: void(0);" 
+                    <a class="nav-link a-txt" href="javascript: void(0);" 
                     (click)="scrollToElement('about')"  
                   
                     >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript: void(0);" 
+                    <a class="nav-link a-txt" href="javascript: void(0);" 
                     (click)="scrollToElement('features')" >Features</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript: void(0);" 
+                    <a class="nav-link a-txt" href="javascript: void(0);" 
                     (click)="scrollToElement('faqs')" >FAQs</a>
                 </li>
             </ul>
@@ -41,12 +41,12 @@
     <!-- (sectionChange)="onSectionChange($event)" -->
     <!-- [spiedTags]="['SECTION']" -->
     <section class="section hero-section bg-ico-hero" id="home">
-        <div class="bg-overlay bg-primary"></div>
+        <div class="bg-overlay bg-web"></div>
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <div class="text-white-50">
-                        <h1 class="text-white fw-semibold mb-3 hero-title">Everything you are. In one, simple link in bio.</h1>
+                    <div class="">
+                        <h1 class=" fw-semibold mb-3 hero-title">Everything you are. In one, simple link in bio.</h1>
                         <p class="font-size-14">Join  people using  Your information for their link in bio. One link to help you share everything you create, curate and sell from your Instagram, TikTok, Twitter, YouTube and other social media profiles.</p>
 
                         <div class="button-items mt-4 d-flex gap-2">
@@ -151,54 +151,7 @@
                 </div>
             </div>
             <hr class="my-5">
-            <div class="row">
-                <div class="col-lg-12">  >
-                    <!-- <ngx-slick-carousel class="events navs-carousel" [config]="aboutConfig" -->
-                        <div ngxSlickItem>
-                            <div class="item">
-                                <div class="client-images">
-                                    <img src="assets/images/clients/1.png" alt="client-img" class="mx-auto img-fluid d-block">
-                                </div>
-                            </div>
-                        </div>
-                        <div ngxSlickItem>
-                            <div class="item">
-                                <div class="client-images">
-                                    <img src="assets/images/clients/2.png" alt="client-img" class="mx-auto img-fluid d-block">
-                                </div>
-                            </div>
-                        </div>
-                        <div ngxSlickItem>
-                            <div class="item">
-                                <div class="client-images">
-                                    <img src="assets/images/clients/3.png" alt="client-img" class="mx-auto img-fluid d-block">
-                                </div>
-                            </div>
-                        </div>
-                        <div ngxSlickItem>
-                            <div class="item">
-                                <div class="client-images">
-                                    <img src="assets/images/clients/4.png" alt="client-img" class="mx-auto img-fluid d-block">
-                                </div>
-                            </div>
-                        </div>
-                        <div ngxSlickItem>
-                            <div class="item">
-                                <div class="client-images">
-                                    <img src="assets/images/clients/5.png" alt="client-img" class="mx-auto img-fluid d-block">
-                                </div>
-                            </div>
-                        </div>
-                        <div ngxSlickItem>
-                            <div class="item">
-                                <div class="client-images">
-                                    <img src="assets/images/clients/6.png" alt="client-img" class="mx-auto img-fluid d-block">
-                                </div>
-                            </div>
-                        </div>
-                    <!-- </ngx-slick-carousel> -->
-                </div>
-            </div>
+           
             <!-- end row -->
         </div>
         <!-- end container -->
@@ -221,7 +174,7 @@
             <div class="row align-items-center pt-4">
                 <div class="col-md-6 col-sm-8">
                     <div>
-                        <img src="assets/images/crypto/features-img/img-1.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="assets/images/features-img/img-1.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
                 <div class="col-md-5 ms-auto">
@@ -249,7 +202,7 @@
                 </div>
                 <div class="col-md-6  col-sm-8 ms-md-auto">
                     <div class="mt-4 me-md-0">
-                        <img src="assets/images/crypto/features-img/img-2.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="assets/images/features-img/img-2.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
             </div>
@@ -257,7 +210,7 @@
             <div class="row align-items-center pt-4">
                 <div class="col-md-6 col-sm-8">
                     <div>
-                        <img src="assets/images/crypto/features-img/img-1.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="assets/images/features-img/img-1.png" alt="" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
                 <div class="col-md-5 ms-auto">
@@ -293,59 +246,13 @@
                     <div class="vertical-nav">
                         <div class="row">
                             <div class="col-lg-12">
-                                <!-- <tabset [justified]="true" class="nav-pills custom-vertical-tabs">
-                                    <tab class="px-4"> -->
+                               
                                         <ng-template tabHeading class="accordion-list collapsed">
                                             <i class="bx bx-help-circle nav-icon d-block mb-2 "></i>
                                             <p class="fw-bold mb-0">General Questions</p>
                                         </ng-template>
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <h4 class="card-title mb-4">General Questions</h4>
-                                                <!-- <accordion [closeOthers]="true" class="custom-accordion">
-                                                    <accordion-group heading="Why do I need a link in bio tool?" #faq class="accordion-list p-0"> -->
-                                                        <span accordion-heading class="float-end">
-                                                            <!-- <i class="mdi" [ngClass]="!faq?.isOpen ? 'mdi mdi-plus accor-plus-icon': 'mdi mdi-minus accor-plus-icon'"></i> -->
-                                                        </span>
-                                                        <div class="card-body p-0">
-                                                            <p class="mb-0">Right now, every time you’ve got something new to share, you have to go to every single one of your channels to change the link in each of your bios. It’s time-consuming and complicated – making it so much harder to keep everything up to date.
-
-                                                                A link in bio tool means you never have to compromise, or remove one link from your bio so you can add another. You can keep everything you want to share online in one link. When you’ve got a change, you only ever have to make it once.</p>
-                                                        </div>
-                                                    <!-- </accordion-group>
-                                                    <accordion-group heading="Why do we use it ?" #faq1 class="accordion-list p-0"> -->
-                                                        <span accordion-heading class="float-end">
-                                                            <!-- <i class="mdi" [ngClass]="!faq1?.isOpen ? 'mdi mdi-plus accor-plus-icon': 'mdi mdi-minus accor-plus-icon'"></i> -->
-                                                        </span>
-                                                        <div class="card-body p-0">
-                                                            <p class="mb-0">If several languages coalesce, the
-                                                                grammar
-                                                                of the resulting language is more simple and regular
-                                                                than that of the individual languages. The new
-                                                                common
-                                                                language will be more simple and regular than the
-                                                                existing European languages.</p>
-                                                        </div>
-                                                    <!-- </accordion-group> -->
-                                                        <span accordion-heading class="float-end">
-                                                            <!-- <i class="mdi" [ngClass]="!faq2?.isOpen ? 'mdi mdi-plus accor-plus-icon': 'mdi mdi-minus accor-plus-icon'"></i> -->
-                                                        </span>
-                                                        <div class="card-body p-0">
-                                                            <p class="mb-0">It will be as simple as Occidental; in
-                                                                fact,
-                                                                it will be Occidental. To an English person, it will
-                                                                seem like simplified English, as a skeptical
-                                                                Cambridge
-                                                                friend of mine told me what Occidental.</p>
-                                                        </div>
-                                                    <!-- </accordion-group> -->
-                                                   
-                                                <!-- </accordion> -->
-                                            </div>
-                                        </div>
-                                    <!-- </tab> -->
-                                  
-                                <!-- </tabset> -->
+                                       
+                                   
                             </div>
                             <div class="col-lg-10">
                                 <!-- <div [ngbNavOutlet]="nav"></div> -->
@@ -385,11 +292,11 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="mb-4">
-                        <img src="assets/images/logo_gau.png" alt="" height="60">
+                        <img src="assets/images/logo.png" alt="" height="60">
                     </div>
 
-                    <p class="mb-2">2024 © Your-information. Design & Develop by Themesbrand</p>
-                    <p>It will be as simple as occidental in fact, it will be to an english person, it will seem like
+                    <p class="mb-2" style="color: black;">2024 © Your-information. Design & Develop by Themesbrand</p>
+                    <p style="color: black;">It will be as simple as occidental in fact, it will be to an english person, it will seem like
                         simplified English, as a skeptical</p>
                 </div>
 
